rename Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ms.opencloudsummit</groupId>
+    <groupId>com.github.phillipkruger.intro.springboot</groupId>
     <artifactId>springboot</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>springboot</name>
